Fix position on mobile

--- a/src/components/Navbar/index.module.css
+++ b/src/components/Navbar/index.module.css
@@ -47,7 +47,13 @@
   transition-timing-function: ease-in-out;
 
   @media (width < $Breakpoint-tablet) {
+    position: relative;
+    left: 50%;
+    width: 100vw;
     height: $size-84;
+    padding: 0;
+
+    transform: translateX(-50%);
   }
 }
 
